syntax = "proto3";

import "shared.proto";

message CrRpc{
  float cr = 1;
}

message CrListRpc{
  repeated CrRpc crs = 1;
}

message MonsterShortRpc{
  int64 id = 1;
  string name = 2;
  float cr = 3;
}

message MonsterShortListRpc{
  repeated MonsterShortRpc monsters = 1;
}

message GetMonstersCrGroupRequestRpc{
  map<string, int32> crs = 1;
  int64 groupId = 2;
}

message RandomMonsterRequestRpc{
  float cr = 1;
  int32 amount = 2;
}

message MonstersByCrRpc{
  map<string, MonsterShortListRpc> monsters = 1;
}

message AmountOfCrRpc{
  map<string, int32> crMap = 1;
}

message GetMonstersRequestRpc{
  int32 amount = 1;
  int32 page = 2;
  MonsterFiltersRpc filters = 3;
}

message MonsterFiltersRpc{
  string name = 1;
  float cr = 2;
  int64 groupId = 3;
  string type = 4;
  string size = 5;
}

service MonsterService{
  rpc getAmountOfMonsterByGroupId(IdRpc) returns(AmountRpc);
  rpc getCrsByMonsterGroupId(IdRpc) returns (CrListRpc);
  rpc getMonstersByCrAndGroup(GetMonstersCrGroupRequestRpc) returns (MonstersByCrRpc);
  rpc getRandomMonstersByCr(RandomMonsterRequestRpc) returns (MonsterShortListRpc);
  rpc getMonstersByCrAmount(AmountOfCrRpc) returns (MonstersByCrRpc);
  rpc getMonsters(GetMonstersRequestRpc) returns (MonsterShortListRpc);
}